2003-08-25  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* CREDITS: Added Arjan Molenaar
	* doc/en/Dia.xml: Added
	* sources/makefile: Application of new patches added
	* doc/en/Dia/CanvasElementHandle.xml:
	* doc/en/Dia/CapStyle.xml:
	* doc/en/Dia/FillStyle.xml:
	* doc/en/Dia/JoinStyle.xml:
	* doc/en/Dia/ShapeType.xml:
	* doc/en/Dia/ShapeVisibility.xml
	* doc/en/Dia/Strength.xml: Documented.
	
2003-08-19  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* WISHLIST: Autoconf wish added.
	* glue/dia-canvas-line.c: Added HeadPos and TailPos set properties, as
	  a workaround for gtk# bug 47168.
	* dia/CanvasLine.custom: Added get/set property for HeadPos and TailPos
	* sources/Dia.metadata: Hide HeadPos and TailPos in CanvasLine
	* PROBLEMS: Updated with solutions
	* CREDITS: Added

2003-08-12  Martin Willemoes Hansen  <mwh@sysrq.dk>
	
	* WISHLIST: Added

2003-08-08  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* NEWS: Added
	* sample/sample.cs: Added SelectAll, UnselectAll and DeleteSelected
	* PROBLEMS: Added a couple of crashes
	* glue/makefile: Added libgnomeui-2.0 to libs
	* glue/dia-canvas-view.c:
	* dia/CanvasView.custom: Added get accessors for SelectedItems and FocusItem
	* sources/Dia.metadata: Renamed signals in CanvasView, to avoid clashes
	  Changed type of property Parent in CanvasItem to CanvasGroup

2003-08-07  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/PlacementTool.custom: Fixed Uni16 to Ansi conversion bug
	* sample/sample.cs: Added start of printing sample, gnomeprint wrapper needed

2003-08-06  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* sources/dia-sharp.sources: 
	* sources/makefile:
	* PROBLEMS:
	* README:
	* api/dia-api.xml: Target latest cvs version of diacanvas2
	* patches/*.diff: Rearranged patches, a dir
	  for each software and version of it that
	  has been modified.
	* patches/dia-storage.h.diff: Fix for comments next to parameters.
	* patches/acinclude.m4.diff: Fix for not finding python 2.3
	* sources/Dia.Metadata: Fixed nameclashes
