@@ -1,0 +1,23 @@
+==============
+= DiaCanvas# =
+==============
+
+Turn into properties:
+--------------------
+
+Dia.CanvasViewItem.IsSelected
+Dia.CanvasViewItem.IsFocused 
+
+
+
+Private API which should be hidden:
+----------------------------------
+
+Dia.CanvasViewItem.AddItems Method
+
+===================
+= Related matters =
+===================
+
+Ship bug report against Gtk# parser/generator 
+about turning Has and Is methods into properties.
